work on unifying modules